[gd_scene load_steps=10 format=3 uid="uid://c4jrhil37wdyq"]

[ext_resource type="Script" uid="uid://d0owwdx1bnbkc" path="res://scenes/date_picker.gd" id="1_51gey"]
[ext_resource type="Material" uid="uid://bqpuuk8wimcvo" path="res://materials/backgroundMaterial.tres" id="1_s6o5m"]
[ext_resource type="Material" uid="uid://5qm2xd5k1m43" path="res://materials/ButtonSelected.tres" id="2_5xki5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s6o5m"]
size = Vector3(0.85, 0.5, 0)

[sub_resource type="QuadMesh" id="QuadMesh_5xki5"]
material = ExtResource("1_s6o5m")
size = Vector2(0.85, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_51gey"]
size = Vector3(0.5, 0.5, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_v2ca3"]
material = ExtResource("2_5xki5")
size = Vector3(0.5, 0.5, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_5xki5"]
size = Vector3(1.5, 0.5, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_51gey"]
material = ExtResource("2_5xki5")
size = Vector3(1.5, 0.5, 0.1)

[node name="DatePicker" type="StaticBody3D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_51gey")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_s6o5m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("QuadMesh_5xki5")

[node name="LabelTitle" type="Label3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0.2, 0)
text = "Date to Search"
font_size = 60

[node name="LabelDay" type="Label3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.3, 0.125346, 0)
text = "Day"

[node name="LabelMonth" type="Label3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0.125346, 0)
text = "Month"

[node name="LabelYear" type="Label3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.3, 0.125346, 0)
text = "Year"

[node name="LabelDaySelect" type="Label3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.3, 0.0629594, 0)
text = "1"

[node name="LabelMonthSelect" type="Label3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0.0629594, 0)
text = "January"

[node name="LabelYearSelect" type="Label3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.3, 0.0629594, 0)
text = "2025"

[node name="DayUp" type="StaticBody3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, -0.349805, -0.02, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DayUp"]
shape = SubResource("BoxShape3D_51gey")

[node name="MeshInstance3D" type="MeshInstance3D" parent="DayUp"]
mesh = SubResource("BoxMesh_v2ca3")

[node name="Label3D" type="Label3D" parent="DayUp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00749579, 0, 0.051)
text = "+"
font_size = 70

[node name="DayDown" type="StaticBody3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, -0.249805, -0.02, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DayDown"]
shape = SubResource("BoxShape3D_51gey")

[node name="MeshInstance3D" type="MeshInstance3D" parent="DayDown"]
mesh = SubResource("BoxMesh_v2ca3")

[node name="Label3D" type="Label3D" parent="DayDown"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.036, 0.051)
text = "-"
font_size = 70

[node name="MonthUp" type="StaticBody3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, -0.0498355, -0.02, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MonthUp"]
shape = SubResource("BoxShape3D_51gey")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MonthUp"]
mesh = SubResource("BoxMesh_v2ca3")

[node name="Label3D" type="Label3D" parent="MonthUp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00749579, 0, 0.051)
text = "+"
font_size = 70

[node name="MonthDown" type="StaticBody3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0.0501645, -0.02, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MonthDown"]
shape = SubResource("BoxShape3D_51gey")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MonthDown"]
mesh = SubResource("BoxMesh_v2ca3")

[node name="Label3D" type="Label3D" parent="MonthDown"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.036, 0.051)
text = "-"
font_size = 70

[node name="YearUp" type="StaticBody3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0.249774, -0.02, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="YearUp"]
shape = SubResource("BoxShape3D_51gey")

[node name="MeshInstance3D" type="MeshInstance3D" parent="YearUp"]
mesh = SubResource("BoxMesh_v2ca3")

[node name="Label3D" type="Label3D" parent="YearUp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00749579, 0, 0.051)
text = "+"
font_size = 70

[node name="YearDown" type="StaticBody3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0.349774, -0.02, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="YearDown"]
shape = SubResource("BoxShape3D_51gey")

[node name="MeshInstance3D" type="MeshInstance3D" parent="YearDown"]
mesh = SubResource("BoxMesh_v2ca3")

[node name="Label3D" type="Label3D" parent="YearDown"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.036, 0.051)
text = "-"
font_size = 70

[node name="Search" type="StaticBody3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, -0.15, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Search"]
shape = SubResource("BoxShape3D_5xki5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Search"]
mesh = SubResource("BoxMesh_51gey")

[node name="Label3D" type="Label3D" parent="Search"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00291419, 0.051)
text = "Search"
font_size = 60
